// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`experimentSettingsReducer Adds new object properly 1`] = `
Object {
  "pipelineStatus": Object {
    "error": false,
    "loading": false,
    "status": Object {},
  },
  "processing": Object {
    "configureEmbedding": Object {
      "embeddingSettings": Object {
        "newProperty": Object {
          "name": "a",
          "value": "b",
        },
      },
    },
    "meta": Object {
      "completingStepError": false,
      "loading": true,
      "loadingSettingsError": false,
    },
    "test": "test data",
  },
}
`;

exports[`experimentSettingsReducer Adds new value properly 1`] = `
Object {
  "pipelineStatus": Object {
    "error": false,
    "loading": false,
    "status": Object {},
  },
  "processing": Object {
    "configureEmbedding": Object {
      "embeddingSettings": Object {
        "newProperty": "property",
      },
    },
    "meta": Object {
      "completingStepError": false,
      "loading": true,
      "loadingSettingsError": false,
    },
    "test": "test data",
  },
}
`;

exports[`experimentSettingsReducer Updates existing value properly 1`] = `
Object {
  "pipelineStatus": Object {
    "error": false,
    "loading": false,
    "status": Object {},
  },
  "processing": Object {
    "configureEmbedding": Object {
      "embeddingSettings": Object {
        "method": "newMethod",
      },
    },
    "meta": Object {
      "completingStepError": false,
      "loading": true,
      "loadingSettingsError": false,
    },
    "test": "test data",
  },
}
`;
